server/compilers/goLiteJS/src/test/ml1/valid/top6.go
// top level declaration permutations
package main

type num int

var x int

func f(){}
